# solar2d-mcp

./: .gitignore  README.md  config.py  pyproject.toml  server.py  utils.py
resources/: __init__.py  info.py
tools/: __init__.py  configure.py  list_projects.py  read_logs.py  run_project.py  screenshot.py  solar_scope.py  state.py  touch.py
tools/social/: __init__.py  configure.py  preview.py  preview_template.html  publish.py
tools/trello/: __init__.py  board_setup.py  card_attach.py  card_comment.py  card_create.py  card_detail.py  card_update.py  cards_list.py  client.py  configure.py
