[project]
name = "solar2d-mcp-server"
version = "0.1.0"
description = "MCP server for Solar2D (Corona SDK) project context"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
social = [
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
